--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="true">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -34,7 +35,8 @@
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/title_activity_maps"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".ui.activities.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -45,12 +47,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.SettingsActivity"
+        <activity
+            android:name=".ui.activities.SettingsActivity"
             android:fitsSystemWindows="false"
             android:parentActivityName=".ui.activities.MainActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait"/>
-        
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+
         <receiver android:name=".net.NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
@@ -58,12 +61,13 @@
         </receiver>
 
 
-        <activity android:name=".ui.activities.UserPreferencesActivity"
+        <activity
+            android:name=".ui.activities.UserPreferencesActivity"
             android:fitsSystemWindows="false"
             android:parentActivityName=".ui.activities.SettingsActivity"
-            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.Dialog"
-            android:screenOrientation="portrait"/>
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
